# made-2022

./: README.md
.github/workflows/: ci.yml
hw1/: CMakeLists.txt  CPPLINT.cfg  DayWeather.c  WeatherAggregationInfo.c  WeatherAggregationInfo.h  input  main.c
hw1/linters/: run.sh
hw1/test/: CMakeLists.txt  test.cpp
hw1/weather/: CMakeLists.txt
hw1/weather/include/: DayWeather.h  WeatherAggregationInfo.h  WeatherStatus.h
hw1/weather/src/: DayWeather.c  WeatherAggregationInfo.c
